refactor:CURD relating biz done
