# cmd/launch_screen/handler.go
@@ -26,6 +26,7 @@ import (
 	"github.com/west2-online/fzuhelper-server/kitex_gen/launch_screen/launchscreenservice"
 	"github.com/west2-online/fzuhelper-server/kitex_gen/model"
 	"github.com/west2-online/fzuhelper-server/pkg/constants"
+	"github.com/west2-online/fzuhelper-server/pkg/errno"
 	"github.com/west2-online/fzuhelper-server/pkg/utils"
 	"golang.org/x/sync/errgroup"
 )
@@ -90,33 +91,139 @@ func (s *LaunchScreenServiceImpl) CreateImage(ctx context.Context, req *launch_s
 }
 
 // GetImage implements the LaunchScreenServiceImpl interface.
-func (s *LaunchScreenServiceImpl) GetImage(ctx context.Context, req *launch_screen.GetImageRequest) (resp *launch_screen.GetImagesByUserIdResponse, err error) {
-	// TODO: Your code here...
-	return
+func (s *LaunchScreenServiceImpl) GetImage(ctx context.Context, req *launch_screen.GetImageRequest) (resp *launch_screen.GetImageResponse, err error) {
+	resp = new(launch_screen.GetImageResponse)
+	claim, err := utils.CheckToken(req.Token)
+	if err != nil {
+		resp.Base = utils.BuildBaseResp(err)
+		return resp, nil
+	}
+	uid := claim.UserId
+	pic, err := service.NewLaunchScreenService(ctx).GetImageById(req.PictureId, uid)
+	resp.Base = utils.BuildBaseResp(err)
+	if err != nil {
+		return resp, nil
+	}
+	resp.Picture = service.BuildImageResp(pic)
+	return resp, nil
 }
 
 // GetImagesByUserId implements the LaunchScreenServiceImpl interface.
 func (s *LaunchScreenServiceImpl) GetImagesByUserId(ctx context.Context, req *launch_screen.GetImagesByUserIdRequest) (resp *launch_screen.GetImagesByUserIdResponse, err error) {
-	// TODO: Your code here...
-	return
+	resp = new(launch_screen.GetImagesByUserIdResponse)
+	claim, err := utils.CheckToken(req.Token)
+	if err != nil {
+		resp.Base = utils.BuildBaseResp(err)
+		return resp, nil
+	}
+	uid := claim.UserId
+	pic, cnt, err := service.NewLaunchScreenService(ctx).GetImagesByUid(uid)
+	resp.Base = utils.BuildBaseResp(err)
+	if err != nil {
+		return resp, nil
+	}
+	resp.Count = &cnt
+	resp.PictureList = service.BuildImagesResp(pic)
+	return resp, nil
 }
 
 // ChangeImageProperty implements the LaunchScreenServiceImpl interface.
 func (s *LaunchScreenServiceImpl) ChangeImageProperty(ctx context.Context, req *launch_screen.ChangeImagePropertyRequest) (resp *launch_screen.ChangeImagePropertyResponse, err error) {
-	// TODO: Your code here...
-	return
+	resp = new(launch_screen.ChangeImagePropertyResponse)
+	claim, err := utils.CheckToken(req.Token)
+	if err != nil {
+		resp.Base = utils.BuildBaseResp(err)
+		return resp, nil
+	}
+	uid := claim.UserId
+
+	origin, err := service.NewLaunchScreenService(ctx).GetImageById(req.PictureId, uid)
+	if err != nil {
+		resp.Base = utils.BuildBaseResp(err)
+		return resp, nil
+	}
+	if origin.Uid != uid {
+		resp.Base = utils.BuildBaseResp(errno.NoAccessError)
+		return resp, nil
+	}
+
+	pic, err := service.NewLaunchScreenService(ctx).UpdateImageProperty(req, uid)
+	resp.Base = utils.BuildBaseResp(err)
+	if err != nil {
+		return resp, nil
+	}
+	resp.Picture = service.BuildImageResp(pic)
+	return resp, nil
 }
 
 // ChangeImage implements the LaunchScreenServiceImpl interface.
 func (s *LaunchScreenServiceImpl) ChangeImage(ctx context.Context, req *launch_screen.ChangeImageRequest) (resp *launch_screen.ChangeImageResponse, err error) {
-	// TODO: Your code here...
-	return
+	resp = new(launch_screen.ChangeImageResponse)
+	claim, err := utils.CheckToken(req.Token)
+	if err != nil {
+		resp.Base = utils.BuildBaseResp(err)
+		return resp, nil
+	}
+	uid := claim.UserId
+
+	origin, err := service.NewLaunchScreenService(ctx).GetImageById(req.PictureId, uid)
+	if err != nil {
+		resp.Base = utils.BuildBaseResp(err)
+		return resp, nil
+	}
+	if origin.Uid != uid {
+		resp.Base = utils.BuildBaseResp(errno.NoAccessError)
+		return resp, nil
+	}
+
+	imgUrl := pack.GenerateImgName(uid)
+	var eg errgroup.Group
+	eg.Go(func() error {
+		err = pack.DeleteImg(imgUrl)
+		if err != nil {
+			return err
+		}
+		err = pack.UploadImg(req.Image, imgUrl)
+		if err != nil {
+			return err
+		}
+		return nil
+	})
+	pic := new(db.Picture)
+	eg.Go(func() error {
+		pic, err = service.NewLaunchScreenService(ctx).UpdateImagePath(req.PictureId, imgUrl)
+		return err
+	})
+	if err = eg.Wait(); err != nil {
+		resp.Base = utils.BuildBaseResp(err)
+		return resp, nil
+	}
+	resp.Base = utils.BuildBaseResp(nil)
+	resp.Picture = service.BuildImageResp(pic)
+	return resp, nil
 }
 
 // DeleteImage implements the LaunchScreenServiceImpl interface.
 func (s *LaunchScreenServiceImpl) DeleteImage(ctx context.Context, req *launch_screen.DeleteImageRequest) (resp *launch_screen.DeleteImageResponse, err error) {
-	// TODO: Your code here...
-	return
+	resp = new(launch_screen.DeleteImageResponse)
+	claim, err := utils.CheckToken(req.Token)
+	if err != nil {
+		resp.Base = utils.BuildBaseResp(err)
+		return resp, nil
+	}
+	uid := claim.UserId
+	pic, err := service.NewLaunchScreenService(ctx).DeleteImage(req.PictureId, uid)
+	if err != nil {
+		resp.Base = utils.BuildBaseResp(err)
+		return resp, nil
+	}
+	if err = pack.DeleteImg(pic.Url); err != nil {
+		resp.Base = utils.BuildBaseResp(err)
+		return resp, nil
+	}
+	resp.Base = utils.BuildBaseResp(nil)
+	resp.Picture = service.BuildImageResp(pic)
+	return resp, nil
 }
 
 // MobileGetImage implements the LaunchScreenServiceImpl interface.
@@ -127,6 +234,8 @@ func (s *LaunchScreenServiceImpl) MobileGetImage(ctx context.Context, req *launc
 
 // AddImagePointTime implements the LaunchScreenServiceImpl interface.
 func (s *LaunchScreenServiceImpl) AddImagePointTime(ctx context.Context, req *launch_screen.AddImagePointTimeRequest) (resp *launch_screen.AddImagePointTimeResponse, err error) {
-	// TODO: Your code here...
-	return
+	resp = new(launch_screen.AddImagePointTimeResponse)
+	err = service.NewLaunchScreenService(ctx).AddPointTime(req.PictureId)
+	resp.Base = utils.BuildBaseResp(err)
+	return resp, nil
 }
