# docs/swagger/swagger.yaml
@@ -9,9 +9,41 @@ paths:
       responses: {}
   /launch_screen/api/image:
     delete:
+      consumes:
+      - json/form
+      description: delete image
+      parameters:
+      - description: 图片id
+        in: query
+        name: picture_id
+        required: true
+        type: integer
+      - description: token
+        in: header
+        name: authorization
+        type: string
+      produces:
+      - application/json
       responses: {}
+      summary: DeleteImage
     get:
+      consumes:
+      - json/form
+      description: get image
+      parameters:
+      - description: 图片id
+        in: query
+        name: picture_id
+        required: true
+        type: integer
+      - description: token
+        in: header
+        name: authorization
+        type: string
+      produces:
+      - application/json
       responses: {}
+      summary: GetImage
     post:
       consumes:
       - json/form
@@ -82,16 +114,123 @@ paths:
       responses: {}
       summary: CreateImage
     put:
+      consumes:
+      - json/form
+      description: change image's properties
+      parameters:
+      - description: 图片id
+        in: query
+        name: picture_id
+        required: true
+        type: integer
+      - description: 1为空，2为页面跳转，3为app跳转
+        in: query
+        name: pic_type
+        required: true
+        type: integer
+      - description: 展示时间
+        in: query
+        name: duration
+        type: integer
+      - description: 链接
+        in: query
+        name: href
+        type: string
+      - description: 开始time(时间戳)
+        in: query
+        name: start_at
+        required: true
+        type: integer
+      - description: 结束time(时间戳)
+        in: query
+        name: end_at
+        required: true
+        type: integer
+      - description: 类型
+        in: query
+        name: s_type
+        required: true
+        type: integer
+      - description: 一天展示次数
+        in: query
+        name: frequency
+        type: integer
+      - description: 每日起始hour
+        in: query
+        name: start_time
+        required: true
+        type: integer
+      - description: 每日结束hour
+        in: query
+        name: end_time
+        required: true
+        type: integer
+      - description: token
+        in: header
+        name: authorization
+        type: string
+      - description: 描述
+        in: query
+        name: text
+        required: true
+        type: string
+      produces:
+      - application/json
       responses: {}
+      summary: ChangeImageProperty
   /launch_screen/api/image/img:
     put:
+      consumes:
+      - json/form
+      description: change image
+      parameters:
+      - description: 图片id
+        in: query
+        name: picture_id
+        required: true
+        type: integer
+      - description: 图片
+        in: formData
+        name: image
+        required: true
+        type: file
+      - description: token
+        in: header
+        name: authorization
+        type: string
+      produces:
+      - application/json
       responses: {}
+      summary: ChangeImage
   /launch_screen/api/image/point:
     get:
+      consumes:
+      - json/form
+      description: add image point time
+      parameters:
+      - description: 图片id
+        in: query
+        name: picture_id
+        required: true
+        type: integer
+      produces:
+      - application/json
       responses: {}
+      summary: AddImagePointTime
   /launch_screen/api/images:
     get:
+      consumes:
+      - json/form
+      description: get launch_screen list by user's token
+      parameters:
+      - description: token
+        in: header
+        name: authorization
+        type: string
+      produces:
+      - application/json
       responses: {}
+      summary: GetImagesByUserId
   /launch_screen/api/login:
     post:
       consumes:
